--- a/src/pages/installation.astro
+++ b/src/pages/installation.astro
@@ -163,7 +163,7 @@ const steps = [
         </Section>
     </div>
 
-    <div class="flex lg:hidden flex-col w-full items-stretch">
+    <div class="flex lg:hidden flex-col w-full items-stretch px-[5vw]">
         <Dropdown title="La Maintenance" client:load>
             Preezeo assure la maintenance de tout type de bornes même celles installées par une autre société. 
             <br><br>
