--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -9,10 +9,14 @@ const prop = Astro.props;
 ---
 
 <section class={`
-    max-w-[1150px] mx-auto
+    wrapper max-w-[1150px] mx-auto
     ${prop.flex ? 'flex justify-center items-stretch' : ''} 
     ${prop.smallBottomMargin ? 'mb-12 md:mb-[7vh] lg:mb-[135px]': 'mb-20 md:mb-[15vh] lg:mb-[200px]'}
     ${prop.c} 
 `}>
     <slot />
 </section>
+
+<style lang="scss" scoped>
+
+</style>
