--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -38,18 +38,18 @@ const { title } = Astro.props;
 		<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<!-- <link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" /> -->
 		<link rel="sitemap" href="/sitemap-index.xml" />
-		<link rel="preload" as="font" href="/fonts/Alien Robot.ttf" type="font/ttf" crossorigin="anonymous"/>
+		<link rel="preload" as="font" href="/fonts/Alien.ttf" type="font/ttf" crossorigin="anonymous"/>
 		<link rel="preload" as="font" href="/fonts/Montserrat.ttf" type="font/ttf" crossorigin="anonymous"/>
 		<link rel="prefetch" as="image" href="/img/backgrounds/bg_shape_top.webp" type="image/webp" crossorigin="anonymous"/>
 		<link rel="prefetch" as="image" href="/img/backgrounds/bg_shape_mid.webp" type="image/webp" crossorigin="anonymous"/>
 		<link rel="prefetch" as="image" href="/img/backgrounds/bg_shape_bot.webp" type="image/webp" crossorigin="anonymous"/>
-		<link rel="preload" as="image" href="/img/logo_burgundy.svg" type="image/svg+xml" />
-		<link rel="preload" as="image" href="/img/logo_purple.svg" type="image/svg+xml" />
+		<link rel="preload" as="image" href="/img/logo/full_burgundy.svg" type="image/svg+xml" />
+		<link rel="preload" as="image" href="/img/logo/full_purple.svg" type="image/svg+xml" />
 		<title>{title}</title>
 	</head>
 	<body class="flex flex-col bg-light text-metal font-montserrat text-base font-normal leading-[140%]">
 		<Header />	
-		<main class="wrapper">
+		<main class="">
 			<slot />
 		</main>
 		<div class="bg-container">
@@ -118,8 +118,7 @@ const { title } = Astro.props;
 	}
 
 	header {
-		position: relative;
-		z-index: 100;
+		
 	}
 
 	main, footer, header {
@@ -139,12 +138,7 @@ const { title } = Astro.props;
 	}
 
 	.wrapper {
-		margin: 0 auto;
-		width: 90vw;
-		max-width: 1400px;
-		@media screen and (max-width: 550px) {
-			width: 90vw;
-		}
+
 	}
 
 	.bg-container {
