--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -101,7 +101,7 @@ import PageHero from '../components/PageHero.astro';
         </Section>
     </div>
 
-    <div class="flex flex-col items-stretch lg:hidden">
+    <Section c="flex flex-col items-stretch lg:hidden">
         <Dropdown title="Pourquoi choisir Preezeo ?" client:load>
             Pour les bornes de recharge à votre domicile et pour les collectivités, PREEZEO vous propose des solutions complètes comprenant des modules électroniques de gestion de l'énergie et de délestage, ainsi que des compteurs de mesure de consommation et une gestion de la facturation efficace. 
             <br><br>
@@ -143,7 +143,7 @@ import PageHero from '../components/PageHero.astro';
             <br><br>
             Ensemble, nous pouvons faire progresser la mobilité électrique et contribuer à un avenir plus durable.
         </Dropdown>
-    </div>
+    </Section>
  
 </Layout>
 
