--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,11 +9,12 @@ import Section from '../components/Section.astro';
 import Card from '../components/Card.astro';
 import ProjectStripe from '../components/ProjectStripe.astro';
 import ButtonContact from '../components/ButtonContact.astro';
+import Slider from '../components/slider.vue';
 
 
 const defaultCards = [
     {content: 'Installation et Maintenance', link: '/installation',},
-    {content: 'Tout savoir sur les aides et les subventions', link: '/subventions',},
+    {content: 'Tout savoir sur les aides et les subventions', link: '/financement',},
     {content: 'Pourquoi choisir PREEZEO', link: '/a-propos',},
     {content: 'Nos Tarifs', link: '/tarifs',},
     {content: 'Informations utiles', link: '/informations',},
@@ -22,13 +23,15 @@ const defaultCards = [
 --- 
 
 <Layout title="Preezeo la borne qu'il vous faut !">
-    <section class="flex flex-col gap-14 justify-start w-fit ml-auto mr-auto mt-8 lg:mt-0 lg:mr-[12%]">
+    <section class="px-[5vw] lg:px-0 flex flex-col gap-14 justify-start w-fit ml-auto mr-auto mt-8 lg:mt-0 lg:mr-[12%]">
         <Headline />
-        <p class="font-medium tracking-3 text-sm md:max-w-[650px]">
+        <p class="mobile-text font-medium tracking-3 text-sm md:max-w-[650px]">
             <span class="font-semibold text-yellow">PREEZEO</span> intervient dans toute la France métropolitaine afin d’installer vos bornes de recharge pour véhicules électriques. 
-            Nous vous assurons un service de qualité effectué par des électriciens professionnels et agréés IRVE. 
             <br>
+            Nous vous assurons un service de qualité effectué par des électriciens professionnels et agréés IRVE. 
+            <br><br class="lg:hidden">
             <span class="font-semibold text-purple">PREEZEO</span> forme de manière régulière ses techniciens. 
+            <br>
             Nous favorisons des produits fabriqués en France et nous vous garantissons une pose sous 30 jours.
         </p>
     </section>
@@ -109,9 +112,9 @@ const defaultCards = [
         </div>
     </Section>
 
-    <Section c="lg:hidden mt-8" flex={true}>
+    <Section c="lg:hidden mt-8" flex={true} smallBottomMargin={true}>
         <div class="flex flex-wrap gap-2 items-stretch justify-center">
-            <a href="/particuliers" class="border border-purple text-center rounded-md p-4 flex flex-[calc(50%-5px)] w-[calc(50%-5px)] max-w-[calc(50%-5px)] flex-col items-center justify-center gap-2">
+            <a href="/particuliers" class="linear-border-tl border text-center rounded-md p-4 flex w-[calc(50%-5px)] max-h-[90px] max-w-[135px] flex-col items-center justify-center gap-2">
                 <div class="w-[25px] h-[25px]">
                     <Image 
                         src="/img/icons/house.svg" 
@@ -119,9 +122,9 @@ const defaultCards = [
                         fetchPriority={true}
                     />
                 </div>
-                <h3 class="flex font-semibold tracking-3 line-clamp-2 text-sm font-montserrat">Particulier</h3>
+                <h3 class="flex font-semibold tracking-3 line-clamp-2 text-xs font-montserrat">Particulier</h3>
             </a>
-            <a href="/professionnels" class="border border-purple text-center rounded-md p-4 flex flex-[calc(50%-5px)] w-[calc(50%-5px)] max-w-[calc(50%-5px)] flex-col items-center justify-center gap-2">
+            <a href="/professionnels" class="linear-border-tr border text-center rounded-md p-4 flex w-[calc(50%-5px)] max-h-[90px] max-w-[135px] flex-col items-center justify-center gap-2">
                 <div class="w-[25px] h-[25px]">
                     <Image 
                         src="/img/icons/building.svg" 
@@ -129,9 +132,9 @@ const defaultCards = [
                         fetchPriority={true}
                     />
                 </div>
-                <h3 class="flex font-semibold tracking-3 line-clamp-2 text-sm font-montserrat">Professionnel</h3>
+                <h3 class="flex font-semibold tracking-3 line-clamp-2 text-xs font-montserrat">Professionnel</h3>
             </a>
-            <a href="/infrastructures" class="border border-purple text-center rounded-md p-2 flex flex-[calc(50%-5px)] w-[calc(50%-5px)] max-w-[calc(50%-5px)] flex-col items-center justify-center gap-2">
+            <a href="/infrastructures" class="linear-border-b border text-center rounded-md p-2 flex w-[calc(50%-5px)] max-h-[90px] max-w-[135px] flex-col items-center justify-center gap-2">
                 <div class="w-[25px] h-[25px]">
                     <Image 
                         src="/img/icons/apartement.svg" 
@@ -139,10 +142,9 @@ const defaultCards = [
                         fetchPriority={true}
                     />
                 </div>
-                <h3 class="flex font-semibold tracking-3 line-clamp-2 text-sm font-montserrat">Infrastructures <br> collective</h3>
+                <h3 class="flex font-semibold tracking-3 line-clamp-2 text-xs font-montserrat">Infrastructures <br> collective</h3>
             </a>
         </div>
-       
     </Section>
 
     <Section c="hidden lg:block" flex={true}>
@@ -233,7 +235,7 @@ const defaultCards = [
         <ButtonContact />
     </Section>
 
-    <section class="flex justify-center items-stretch flex-wrap gap-10 max-w-[1000px] mx-auto mb-10 md:mb-[250px]">
+    <Section flex={true} c="hidden lg:flex justify-center items-stretch flex-wrap gap-10 !max-w-[1000px] mx-auto mb-10 md:mb-[250px]">
         {defaultCards.map((item) => (
             <Card 
                 color="dark"
@@ -246,9 +248,74 @@ const defaultCards = [
                 </a>
             </Card>
         ))}
-    </section>
+    </Section>
 
-    <section class="flex align-center justify-center mb-10 md:mb-[250px] max-w-[75vw] md:max-w-fit mx-auto">
+    <div class="lg:hidden mb-20">
+        <Slider 
+            items={defaultCards} 
+            itemClass="slider-card-default"
+            slot={true}
+            client:load
+        >
+            <Card 
+                color="dark"
+                isSmall={true}
+                shadow={true}
+                slot="slide-0"
+            >  
+                <a slot="content" href={defaultCards[0].link} class="mx-auto w-[250px] flex flex-col align-center justify-center gap-2 h-25">
+                    <h3 class="font-montserrat font-bold text-sm text-center">{defaultCards[0].content}</h3>
+                    <span class="bg-purple w-1/3 h-[1.5px] block mx-auto"></span>
+                </a>
+            </Card>
+            <Card 
+                color="dark"
+                isSmall={true}
+                shadow={true}
+                slot="slide-1"
+            >  
+                <a slot="content" href={defaultCards[1].link} class="mx-auto w-[250px] flex flex-col align-center justify-center gap-2 h-25">
+                    <h3 class="font-montserrat font-bold text-sm text-center">{defaultCards[1].content}</h3>
+                    <span class="bg-purple w-1/3 h-[1.5px] block mx-auto"></span>
+                </a>
+            </Card>
+            <Card 
+                color="dark"
+                isSmall={true}
+                shadow={true}
+                slot="slide-2"
+            >  
+                <a slot="content" href={defaultCards[2].link} class="mx-auto w-[250px] flex flex-col align-center justify-center gap-2 h-25">
+                    <h3 class="font-montserrat font-bold text-sm text-center">{defaultCards[2].content}</h3>
+                    <span class="bg-purple w-1/3 h-[1.5px] block mx-auto"></span>
+                </a>
+            </Card>
+            <Card 
+                color="dark"
+                isSmall={true}
+                shadow={true}
+                slot="slide-3"
+            >  
+                <a slot="content" href={defaultCards[3].link} class="mx-auto w-[250px] flex flex-col align-center justify-center gap-2 h-25">
+                    <h3 class="font-montserrat font-bold text-sm text-center">{defaultCards[3].content}</h3>
+                    <span class="bg-purple w-1/3 h-[1.5px] block mx-auto"></span>
+                </a>
+            </Card>
+            <Card 
+                color="dark"
+                isSmall={true}
+                shadow={true}
+                slot="slide-4"
+            >  
+                <a slot="content" href={defaultCards[4].link} class="mx-auto w-[250px] flex flex-col align-center justify-center gap-2 h-25">
+                    <h3 class="font-montserrat font-bold text-sm text-center">{defaultCards[4].content}</h3>
+                    <span class="bg-purple w-1/3 h-[1.5px] block mx-auto"></span>
+                </a>
+            </Card>
+        </Slider>
+    </div>
+
+    <Section flex={true} c="max-w-[75vw] md:max-w-fit mx-auto">
         <Tips
             title="Offre de parrainage"
             size="medium"
@@ -275,39 +342,39 @@ const defaultCards = [
                 </span>
             </p>
         </Tips>
-    </section>
+    </Section>
 
     <Section flex={true} c="mb-0">
-        <div class="grid place-items-center grid-cols-2 gap-5 md:grid-cols-5 md:gap-10">
-            <div class="max-w-[100px] sm:max-w-[175px] md:max-w-100">    
+        <div class="grid place-items-center grid-cols-3 gap-5 md:grid-cols-5 md:gap-10">
+            <div class="h-[100px] w-[100px]">    
                 <Image 
                     src="/img/illu/avere.png" 
                     alt="avere Logo"
                     fetchPriority={true}
                 />
             </div>
-            <div class="max-w-[100px] sm:max-w-[175px] md:max-w-100">
+            <div class="h-[100px] w-[100px]">
                 <Image 
                     src="/img/illu/advenir.png" 
                     alt="advenir Logo"
                     fetchPriority={true}
                 />
             </div>
-            <div class="max-w-[100px] sm:max-w-[175px] md:max-w-100">
+            <div class="h-[100px] w-[100px]">
                 <Image 
                     src="/img/illu/qualifelec.png" 
                     alt="qualifelec Logo"
                     fetchPriority={true}
                 />
             </div>
-            <div class="max-w-[100px] sm:max-w-[175px] md:max-w-100">
+            <div class="h-[100px] w-[100px]">
                 <Image 
                     src="/img/illu/evready.png" 
                     alt="evready Logo"
                     fetchPriority={true}
                 />
             </div>
-            <div class="max-w-[100px] sm:max-w-[175px] md:max-w-100">
+            <div class="h-[100px] w-[100px]">
                 <Image 
                     src="/img/illu/irve.png" 
                     alt="irve Logo"
